--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "com.actioncode.[packagename]",
-  "displayName": "ActionCode-[PackageName]",
+  "name": "com.actioncode.visual-effects",
+  "displayName": "ActionCode-Visual Effects",
   "version": "0.1.0",
   "unity": "2019.3",
   "description": "This package contains [...].",
   "keywords": [
-    "",
-    ""
+    "VFX",
+    "Effects"
   ],
   "dependencies": {},
   "license": "MIT",
-  "homepage": "https://github.com/HyagoOliveira/[PACKAGE]#readme",
+  "homepage": "https://github.com/HyagoOliveira/VisualEffects#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/HyagoOliveira/[PACKAGE].git"
+    "url": "https://github.com/HyagoOliveira/VisualEffects.git"
   },
-  "documentationUrl": "https://github.com/HyagoOliveira/[PACKAGE]#readme",
-  "changelogUrl": "https://github.com/HyagoOliveira/[PACKAGE]/CHANGELOG.md",
+  "documentationUrl": "https://github.com/HyagoOliveira/VisualEffects#readme",
+  "changelogUrl": "https://github.com/HyagoOliveira/VisualEffects/CHANGELOG.md",
   "author": {
     "name": "Hyago Oliveira",
     "email": "hyagogow@gmail.com"
