--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "VFX",
     "Effects"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "com.unity.shadergraph": "8.0.0"
+  },
   "license": "MIT",
   "homepage": "https://github.com/HyagoOliveira/VisualEffects#readme",
   "repository": {
