Add AC Physics package dependency

--- a/Runtime/ActionCode.VisualEffects.asmdef
+++ b/Runtime/ActionCode.VisualEffects.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "ActionCode.VisualEffects",
     "rootNamespace": "ActionCode.VisualEffects",
-    "references": [],
+    "references": [
+        "GUID:d989ee66b9b10ce4f97712c0ddd5a8c9"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
