--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "Effects"
   ],
   "dependencies": {
-    "com.unity.shadergraph": "8.0.0"
+    "com.unity.shadergraph": "8.0.0",
+    "com.actioncode.physics": "0.2.0"
   },
   "license": "MIT",
   "homepage": "https://github.com/HyagoOliveira/VisualEffects#readme",
