--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.actioncode.visual-effects",
   "displayName": "ActionCode-Visual Effects",
-  "version": "0.1.0",
-  "unity": "2019.3",
-  "description": "This package contains [...].",
+  "version": "1.0.0",
+  "unity": "2020.3",
+  "description": "Shaders, interfaces and components used for Visual Effects.",
   "keywords": [
     "VFX",
     "Effects"
